<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Todolist</string>
    <string name="start_date">開始</string>
    <string name="goal_date">目標</string>
    <string name="deadline_date">締切</string>
    <string name="back">戻る</string>
    <string name="add">追加</string>
    <string name="title_add_todo">Todo登録</string>
    <string name="title_add_category">カテゴリ登録</string>
    <string name="category">カテゴリ</string>
    <string name="current_category">今のカテゴリ</string>
    <string name="new_category">新しいカテゴリ</string>
    <string name="term_type">期間タイプ</string>
    <string name="importance_type">重要性</string>
    <string name="todo">Todo</string>
    <string name="to_todo">Todoリストへ</string>
    <string name="edit">編集</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
    <string name="color">色</string>
    <string name="current_color">いまの色</string>
    <string name="new_color">あたらしい色</string>
    <string name="mtrl_picker_range_header_unselected" tools:override="true">選択されていません</string>
    <string name="mtrl_picker_range_header_only_start_selected" tools:override="true">%s 開始</string>
    <string name="mtrl_picker_range_header_only_end_selected" tools:override="true">締切 %s</string>
    <string name="mtrl_picker_text_input_date_range_start_hint" tools:override="true">Дата начала</string>
    <string name="mtrl_picker_text_input_date_range_end_hint" tools:override="true">Дата начала</string>
    <string name="mtrl_picker_text_input_date_format" tools:override="true">yyyy.MM.dd</string>
    <string name="mtrl_picker_out_of_range" tools:override="true">選択範囲外です</string>
    <string name="mtrl_picker_invalid_format" tools:override="true">不正な形式です</string>
    <string name="mtrl_picker_save" tools:override="true">保存</string>
    <string name="mtrl_picker_date_header_title" tools:override="true">日付選択</string>
    <string name="mtrl_picker_date_header_unselected" tools:override="true">選択されていません</string>
    <string name="mtrl_picker_text_input_date_hint" tools:override="true">日付</string>
    <string name="mtrl_picker_text_input_year_abbr" tools:override="true">年</string>
    <string name="mtrl_picker_text_input_month_abbr" tools:override="true">月</string>
    <string name="mtrl_picker_text_input_day_abbr" tools:override="true">日</string>
    <string name="mtrl_picker_invalid_range" tools:override="true">不正な範囲です</string>
    <string name="mtrl_picker_invalid_format_use" tools:override="true">入力形式: %1$s</string>
    <string name="mtrl_picker_invalid_format_example" tools:override="true">入力例: 12/31/00</string>
</resources>