<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo"
        android:autofillHints=""
        android:inputType="text"

        />
    </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_input_start_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_input_todo"
    app:hintAnimationEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:autofillHints=""
        android:inputType="date"
        android:clickable="true"
        android:focusable="false"
/>
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_goal_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_start_date"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_goal_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_date"
        android:autofillHints=""
        android:inputType="date"
        android:clickable="true"
        android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_deadline_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_goal_date"
        app:hintAnimationEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_deadline_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deadline_date"
        android:autofillHints=""
        android:inputType="date"
        android:clickable="true"
        android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_type_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/term_type"
        app:layout_constraintTop_toBottomOf="@+id/text_input_deadline_date"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enthusiasm_type_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/importance_type"
        app:layout_constraintTop_toBottomOf="@+id/term_type_menu"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        app:layout_constraintTop_toBottomOf="@+id/enthusiasm_type_menu"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:strokeColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:strokeColor="@color/purple_700"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>