<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.CardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:rippleColor="@color/black"
        app:strokeColor="@color/purple_700"
        app:cardCornerRadius="@dimen/divider_thickness"
        app:strokeWidth="@dimen/tiny_dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/divider_thickness"
            android:layout_marginBottom="@dimen/divider_thickness"
            android:layout_marginEnd="@dimen/margin_small"
            >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_goal_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_deadline_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline_date"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_term_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_importance_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_type"
            android:layout_gravity="end"
            android:background="@drawable/layout_background"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="@dimen/five"
            />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>